--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -5,5 +5,9 @@
 @import 'type/variables';
 @import 'variables';
 @import 'mixins';
+
 @import 'placeholders';
 @include placeholders-init();
+
+@import 'layout';
+@include resets-init();
