--- a/sass/_placeholders.scss
+++ b/sass/_placeholders.scss
@@ -10,6 +10,14 @@
       @include prefix((transform: translate3d(0, 0, 0)), webkit moz ms);
     }
 
+    %browser-reset {
+      background: none;
+      border: 0;
+      margin: 0;
+      outline: 0;
+      padding: 0;
+      word-wrap: break-word;
+    }
 
     %pill {
       border-radius: $MAX-PX;
