--- a/sass/columns/_variables.scss
+++ b/sass/columns/_variables.scss
@@ -6,10 +6,10 @@ $columns-max-count: 12;
 
 $columns-gutter: (
   xs: 8px,
-  s: 8px,
-  m: 16px,
+  s: 12px,
+  m: 12px,
   l: 16px,
-  xl: 24px
+  xl: 24px,
 ) !default;
 
 
