--- a/sass/ui/card/_placeholders.scss
+++ b/sass/ui/card/_placeholders.scss
@@ -4,10 +4,12 @@
 
     %#{$card-name} {
       @extend %#{$flex-name};
+      @extend %media-margin-gutters-half-y;
       background: $card-background;
       border-width: $card-border-width;
       border-style: $card-border-style;
       border-color: $card-border-color;
+      border-radius: $card-border-radius;
       @include flex-direction(column);
     }
   }
