--- a/sass/ui/form/_layout.scss
+++ b/sass/ui/form/_layout.scss
@@ -1,6 +1,10 @@
 @mixin form-init() {
   @if not global-variable-exists(-FORM-LOADED) {
     $-FORM-LOADED: true !global;
+    form {
+      @extend %browser-reset;
+    }
+    
     // Resets */
     input[type=text],
     input[type=email],
@@ -12,11 +16,7 @@
     input[type=password],
     textarea,
     button {
-      appearance: none;
-      -moz-appearance: none;
-      -webkit-appearance: none;
-      outline: none;
-      margin: 0;
+      @extend %reset-form-appearance;
     }
 
 
@@ -50,79 +50,37 @@
     input[type=password],
     input[type=date],
     input[type=search] {
-      border-radius: $input-text-border-radius;
-      background: $input-text-background;
-      padding: $input-text-padding-top $input-text-padding-right
-               $input-text-padding-bottom $input-text-padding-left;
-      margin: $input-text-margin;
-      border: $input-text-border;
-      width: $input-text-width;
-      @include font-line($input-text-font-size,
-                         $input-text-line-height,
-                         $color: $input-text-font-color,
-                         $weight: $input-text-font-weight,
-                         $family: $input-text-font);
+      @extend %input-text;
     }
 
 
     // Submit Buttons */
     button[type=submit], input[type=submit] {
-      @extend %#{$flex-name}--y-center;
-      background: $submit-background;
-      border: $submit-border;
-      padding: $submit-padding-top $submit-padding-right
-               $submit-padding-bottom $submit-padding-left;
-      margin: $submit-margin;
-      border-radius: $submit-border-radius;
-      @include font-line($submit-font-size, $submit-line-height,
-                         $color: $submit-font-color,
-                         $weight: $submit-font-weight,
-                         $family: $submit-font);
-
-      & > * {
-        @extend %#{$flex-name};
-      }
+      @extend %submit-button;
     }
 
 
     .no-touchevents button[type=submit],
     .no-touchevents input[type=submit] {
       &:hover {
-        cursor: pointer;
-        background: $submit-background-hover;
-        color: $submit-font-color;
+        @extend %submit-button-hover;
       }
 
       &:active {
-        background: $submit-background-active;
-        color: $submit-font-color;
+        @extend %submit-button-active;
       }
     }
 
 
     // Textareas */
     textarea {
-      background: $textarea-background;
-      padding: $textarea-padding-top $textarea-padding-right
-               $textarea-padding-bottom $textarea-padding-left;
-      margin: $textarea-margin;
-      border: $textarea-border;
-      border-radius: $textarea-border-radius;
-      @include font-line($textarea-font-size, $textarea-line-height,
-                         $color: $textarea-font-color,
-                         $weight: $textarea-font-weight,
-                         $family: $textarea-font);
+      @extend %textarea;
     }
 
 
     // Placeholders */
     .placeholder {
-      opacity: $placeholder-opacity;
-      @include font-line($placeholder-font-size,
-                         $placeholder-line-height,
-                         $color: $placeholder-font-color,
-                         $weight: $placeholder-font-weight,
-                         $family: $placeholder-font);
+      @extend %input-placeholder;
     }
 
 
