--- a/sass/ui/form/toggler/_layout.scss
+++ b/sass/ui/form/toggler/_layout.scss
@@ -1,6 +1,6 @@
 @mixin toggler-init() {
   @if not global-variable-exists(-TOGGLER-LOADED) {
-    $-TOGGLER-LOADED: true;
+    $-TOGGLER-LOADED: true !global;
 
     #{$toggler-class} {
       @extend #{$checkbox-class};
