--- a/sass/ui/nav/_core.scss
+++ b/sass/ui/nav/_core.scss
@@ -2,7 +2,7 @@
 @import 'dropdown/core';
 
 /** Navbar (.navbar) **/
-@import 'bar/core';
+@import 'navbar/core';
 
 /** Paginate (.paginate) **/
 @import 'paginate/core';
