--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,43 +3,23 @@ $MAX-PX: 10000000px;
 
 
 // Default borders
-$light-border: rgba(0, 0, 0, 0.07) !default;
-$border: rgba(0, 0, 0, 0.12) !default;
-$dark-border: rgba(0, 0, 0, 0.24) !default;
 $border-width: 1px !default;
 $border-style: solid !default;
 $border-radius: 2px;
 
-
-// Body */
-$body-alignment: left !default;
-$body-background: lighten($lightest-grey, 2%) !default;
-
-
-// Links */
-$link-color: $blue !default;
-$link-hover-color: $grey !default;
-$link-active-color: $grey !default;
-$link-decoration: none !default;
-$link-tap-highlight: $light-border !default;
+// Disabled links
 $disabled-link-color: $dark-border !default;
 
-
-// Document text selection */
-$selection-background: $light-blue !default;
-$selection-font-color: $white !default;
-
-
-// Dividers */
+// Dividers
 $divider-color: $border !default;
 $divider-height: 1px !default;
 
 
-// Responsive media queries */
+// Responsive media queries
 $phone: "only screen and (max-width: 639px)" !default;
 $phone-max: $phone !default;
-$phone-s: "only screen and (max-width: 359px)" !default;
-$phone-m: "only screen and (min-width: 360px) and (max-width: 469px)" !default;
+$phone-s: "only screen and (max-width: 324px)" !default;
+$phone-m: "only screen and (min-width: 325px) and (max-width: 469px)" !default;
 $phone-l: "only screen and (min-width: 480px) and (max-width: 639px)" !default;
 
 $tablet: "only screen and (min-width: 640)" !default;
