--- a/sass/colors/_variables.scss
+++ b/sass/colors/_variables.scss
@@ -54,3 +54,25 @@ $colors: (
   black: $black,
   white: $white
 );
+
+
+// Border colors
+$light-border: rgba(0, 0, 0, 0.07) !default;
+$border: rgba(0, 0, 0, 0.12) !default;
+$dark-border: rgba(0, 0, 0, 0.24) !default;
+
+
+// Links
+$link-color: $blue !default;
+$link-hover-color: $grey !default;
+$link-active-color: $grey !default;
+$link-decoration: none !default;
+$link-tap-highlight: $light-border !default;
+
+
+// Document text selection
+$selection-background: $light-blue !default;
+$selection-font-color: $white !default;
+
+// Body color
+$body-background: lighten($lightest-grey, 2%) !default;
