--- a/sass/type/_variables.scss
+++ b/sass/type/_variables.scss
@@ -6,7 +6,7 @@ $type-class: unquote("#{unquote(".")}#{$type-name}") !default;
 $body-font: -apple-system, BlinkMacSystemFont, "Roboto", "Helvetica Neue", Arial, sans-serif !default;
 $body-font-size: 16px !default;
 $body-font-color: $grey !default;
-$body-line-height: 1.38em !default;
+$body-line-height: 1.1 !default;
 $body-font-weight: 300 !default;
 
 
@@ -21,12 +21,12 @@ $heading-line-height: 1.1 !default;
 
 // Paragraphs */
 $paragraph-padding: 0 !default;
-$paragraph-margin: 0 0 1.2em !default;
+$paragraph-margin: 0 0 1.2 !default;
 
 $paragraph-font: -apple-system, BlinkMacSystemFont, "Roboto", "Helvetica Neue", Arial, sans-serif !default;
 $paragraph-font-size: 16px !default;
-$paragraph-line-height: 1.38em !default;
-$paragraph-letter-spacing: 0.38px !default;
+$paragraph-line-height: 1.4 !default;
+$paragraph-letter-spacing: initial !default;
 $paragraph-font-color: inherit !default;
 $paragraph-font-weight: 300 !default;
 $paragraph-text-align: left !default;
