--- a/sass/ui/button/_layout.scss
+++ b/sass/ui/button/_layout.scss
@@ -3,21 +3,7 @@
     $-BUTTON-LOADED: true !global;
 
     button, #{$button-class} {
-      background: $button-background;
-      color: $button-color;
-      border-style: $button-border-style;
-      border-width: $button-border-width;
-      border-color: $button-border-color;
-      border-radius: $button-border-radius;
-      line-height: $button-line-height;
-
-      &.hover {
-        @extend %#{$button-name}--hover;
-      }
-
-      &.active {
-        @extend %#{$button-name}--active;
-      }
+      @extend %button;
     }
 
 
@@ -40,22 +26,11 @@
     }
 
 
-    #{$button-class}-group:not(button):not(#{$button-class})#{$button-class}--s {
-      padding: 0;
-    }
-
-
     #{$button-class}--m,
     #{$button-class}--m button,
     #{$button-class}--m #{$button-class} {
       @extend %#{$button-name}--m;
     }
-
-
-    #{$button-class}-group:not(button):not(#{$button-class})#{$button-class}--m {
-      padding: 0;
-    }
-
 
     #{$button-class}--l,
     #{$button-class}--l button,
@@ -67,13 +42,15 @@
     @include colorized-buttons();
 
 
-    #{$button-class}-group:not(button):not(#{$button-class})#{$button-class}--l {
-      padding: 0;
+    #{$button-class}-group#{$button-class}--l,
+    #{$button-class}-group#{$button-class}--m,
+    #{$button-class}-group#{$button-class}--s  {
+      @extend %p--0;
     }
 
 
     #{$button-class}-group {
-      @extend .input-group;
+      @extend %input-group;
     }
 
 
