--- a/sass/ui/button/_mixins.scss
+++ b/sass/ui/button/_mixins.scss
@@ -4,11 +4,11 @@
     $color-val: map-get($colors, $color);
 
     #{$button-class}--#{$color} #{$button-class},
-    #{$button-class}#{$button-class}--#{$color} #{$button-class},
+    // #{$button-class}#{$button-class}--#{$color} #{$button-class},
     #{$button-class}--#{$color} button,
-    #{$button-class}#{$button-class}--#{$color} button,
-    #{$button-class}--#{$color}:not(.btn-group),
-    #{$button-class}#{$button-class}--#{$color}:not(.btn-group) {
+    // #{$button-class}#{$button-class}--#{$color} button,
+    // #{$button-class}--#{$color}:not(.btn-group),
+    #{$button-class}#{$button-class}--#{$color} {
       @extend %#{$type}--#{$color};
 
       &.active {
@@ -16,12 +16,13 @@
       }
     }
 
-    .no-touchevents #{$button-class}--#{$color}:not(.btn-group),
-    .no-touchevents #{$button-class}#{$button-class}--#{$color}:not(.btn-group),
-    .no-touchevents #{$button-class}--#{$color} #{$button-class}:not(.btn-group),
-    .no-touchevents #{$button-class}#{$button-class}--#{$color} #{$button-class},
+    // .no-touchevents #{$button-class}--#{$color}:not(.btn-group),
+    .no-touchevents #{$button-class}#{$button-class}--#{$color},
+    .no-touchevents #{$button-class}--#{$color} #{$button-class},
+    // .no-touchevents #{$button-class}#{$button-class}--#{$color} #{$button-class},
     .no-touchevents #{$button-class}--#{$color} button,
-    .no-touchevents #{$button-class}#{$button-class}--#{$color} button {
+    //.no-touchevents #{$button-class}#{$button-class}--#{$color} button
+    {
       &:hover, &.hover {
         background: lighten($color-val, 5%);
       }
@@ -33,11 +34,11 @@
   }
 
   #{$button-class}--transparent #{$button-class},
-  #{$button-class}#{$button-class}--transparent #{$button-class},
+  // #{$button-class}#{$button-class}--transparent #{$button-class},
   #{$button-class}--transparent button,
-  #{$button-class}#{$button-class}--transparent button,
-  #{$button-class}--transparent:not(.btn-group),
-  #{$button-class}#{$button-class}--transparent:not(.btn-group) {
+  // #{$button-class}#{$button-class}--transparent button,
+  // #{$button-class}--transparent:not(.btn-group),
+  #{$button-class}#{$button-class}--transparent {
     background: transparent;
 
     &.active {
@@ -45,12 +46,13 @@
     }
   }
 
-  .no-touchevents #{$button-class}--transparent:not(.btn-group),
-  .no-touchevents #{$button-class}#{$button-class}--transparent:not(.btn-group),
-  .no-touchevents #{$button-class}--transparent #{$button-class}:not(.btn-group),
-  .no-touchevents #{$button-class}#{$button-class}--transparent #{$button-class},
+  // .no-touchevents #{$button-class}--transparent:not(.btn-group),
+  .no-touchevents #{$button-class}#{$button-class}--transparent,
+  .no-touchevents #{$button-class}--transparent #{$button-class},
+  // .no-touchevents #{$button-class}#{$button-class}--transparent #{$button-class},
   .no-touchevents #{$button-class}--transparent button,
-  .no-touchevents #{$button-class}#{$button-class}--transparent button {
+  // .no-touchevents #{$button-class}#{$button-class}--transparent button
+  {
     &:hover, &.hover {
       background: rgba(0, 0, 0, 0.10);
     }
