--- a/sass/ui/form/_core.scss
+++ b/sass/ui/form/_core.scss
@@ -1,10 +1,14 @@
 @import '../../core';
+
 @import '../../flexibility/variables';
 @import '../../flexibility/mixins';
 @import '../../flexibility/placeholders';
 @include flex-placeholders-init();
 
 @import 'variables';
+@import 'placeholders';
+@include form-placeholders-init();
+
 @import 'layout';
 @include form-init();
 
