--- a/sass/ui/form/checkbox/_variables.scss
+++ b/sass/ui/form/checkbox/_variables.scss
@@ -1,2 +1,5 @@
 $checkbox-name: 'checkbox' !default;
 $checkbox-class: unquote("#{unquote(".")}#{$checkbox-name}") !default;
+
+$checkbox-checkmark-height: 24px !default;
+$checkbox-checkmark-width: 24px !default;
