--- a/sass/ui/form/input-group/_layout.scss
+++ b/sass/ui/form/input-group/_layout.scss
@@ -1,41 +1,9 @@
 @mixin input-group-init() {
   @if not global-variable-exists(-INPUT-GROUP-LOADED) {
+    $-INPUT-GROUP-LOADED: true !global;
+
     .input-group {
-      @extend %#{$flex-name};
-      @extend %#{$flex-name}--nowrap;
-      @extend %#{$flex-name}--y-stretch;
-      @extend %#{$flex-name}--x-center;
-      position: relative;
-
-      input {
-        @extend %#{$flex-name}--fluid;
-      }
-
-      label, .input-group__member {
-        @extend input[type=text];
-        background: darken($input-text-background, 5%);
-      }
-
-      & > * {
-        @extend %#{$flex-name}--fixed;
-        @extend %#{$flex-name}--y-center;
-        margin: 0;
-      }
-
-      & > *:first-child:not(:last-child) {
-        border-top-right-radius: 0 !important;
-        border-bottom-right-radius: 0 !important;
-      }
-
-      & > *:last-child:not(:first-child) {
-        border-left: 0 !important;
-        border-top-left-radius: 0 !important;
-        border-bottom-left-radius: 0 !important;
-      }
-      & > *:not(:first-child):not(:last-child) {
-        border-left: 0 !important;
-        border-radius: 0 !important;
-      }
+      @extend %input-group;
     }
 
 
